--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "RetroPie plugin to create profiles for save files and save states",
   "bin": "./build/bin/retropie-profiles.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pkg": "pkg --options harmony-async-await ./build/bin/retropie-profiles.js -o retropie-profiles"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,10 @@
   },
   "homepage": "https://github.com/TooTallNate/RetroPie-profiles#readme",
   "dependencies": {
+    "ansi-canvas-render": "^1.0.1",
     "blessed": "^0.1.81",
+    "canvas": "^1.6.2",
+    "fs-promise": "^1.0.0",
     "react": "^0.14.7",
     "react-blessed": "0.1.8"
   },
